tests/reference/llvm-global_scope3-00a245c.stderr
syntax error: Expected program end
 --> tests/global_scope3.f90:1:1 - 3:9
  |
1 |    integer :: x
  |    ^^^^^^^^^^^^...
...
  |
3 |    x = x + 1
  | ...^^^^^^^^^ 
